resources/tests/valid_syntax/if_elif_else.ct
//Compilation successful!
fn a()->void
{
  if 10 == 10:
    10;
  elif 10 == 11:
    11;
  else:
    12;
}