resources/tests/invalid_syntax/binary_operator.ct
//`Expected a binary operator!
//1
fn main()->i64 {
  10 10 10;
}